--- a/Jsp01_MyBoard/WebContent/index.html
+++ b/Jsp01_MyBoard/WebContent/index.html
@@ -5,9 +5,14 @@
 <title>Insert title here</title>
 </head>
 <body>
-
-	<a href="./mylist.jsp">list</a>
 	
+	<!-- 
+		 / = root
+		./ = 자신이 속해있는 폴더
+	   ../ = 상위폴더	
+	 --> 
+	
+	<a href="mylist.jsp">게시판</a>
 
 </body>
 </html>
