4조 세미조와 로그인나머지 완료

--- a/Jsp99_Practice/WebContent/index.html
+++ b/Jsp99_Practice/WebContent/index.html
@@ -6,6 +6,13 @@
 </head>
 <body>
 	
+	<!-- 
+		
+		BOARD와 USER의 DTO, BIZ, DAO가 별도로 필요할듯??
+		넘 빡세니까 다음에...
+	
+	 -->
+	
 	<h1>TEST WORLD</h1>
 	
 	<form action="./logincon.jsp" method="post">
