--- a/Jsp04_LoginBoard/WebContent/index.html
+++ b/Jsp04_LoginBoard/WebContent/index.html
@@ -23,7 +23,7 @@
 			<tr>
 				<td colspan="2" align="right">
 					<input type="submit" value="login" />
-					<input type="button" value="regist" onclick="" />
+					<input type="button" value="regist" onclick="location.href='logincontroller.jsp?command=registform'" />
 				</td>	
 			</tr>
 			
