--- a/Jsp07_EL_JSTL/WebContent/index.html
+++ b/Jsp07_EL_JSTL/WebContent/index.html
@@ -14,6 +14,9 @@
 	<a href="controller.do?command=jstl">JSTL Test</a>
 	<!-- 해당 링크를 클릭하면 controller.do에 key=command, value=jstl 값을 들고 넘어간다.
 	     그럼 web.xml에서 작성한 서블릿 코드에 따라 ELController로 가버린다~ -->
+	<br/>
+	<a href="controller.do?command=usebean">jsp:usebean</a>
+	
 	
 </body>
 </html>
