--- a/Jsp13_CalBoard/WebContent/index.html
+++ b/Jsp13_CalBoard/WebContent/index.html
@@ -8,5 +8,20 @@
 
 	<a href="cal.do?command=calendar">일정보기</a>
 
+	<!-- 
+	
+		 json lib : http://json-lib.sourceforge.net/
+		 ezmorph 1.0.6 : http://ezmorph.sourceforge.net/
+		 jakarta commons : http://commons.apache.org/
+		 	jakarta commons-lang 2.5 : 
+		 	jakarta commons-beanutils 1.8.0 : 
+		 	jakarta commons-collections 3.2.1 : 
+		 	jakarta commons-logging 1.1.1 : 
+		 
+		
+	
+	 -->
+	
+
 </body>
 </html>
